--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Script Accordion</title>
-    <link rel="icon" type="image/x-icon" href="accordion icon.png">
+    <link rel="icon" type="image/x-icon" href="Resources/accordion icon.png">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
